5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4137/executions/1759_2102.log
== TEST (2019-05-29 19:16:40) 
-- CODE:
from numpy import*
d = array(eval(input("Digite seu vetor")))

i = 0

while i != size(a):
	if(d[i]==0):
		d[i] = 0
	else(d[i]%2 != 0):
		d[i] = 0
	i = i + 1
print(d)
-- ERROR:
File "XXXX", line 9
    else(d[i]%2 != 0):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:17:01) 
-- CODE:
from numpy import*
d = array(eval(input("Digite seu vetor")))

i = 0

while i != size(a):
	if(d[i]==0):
		d[i] = 0
	elif(d[i]%2 != 0):
		d[i] = 0
	i = i + 1
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:17:20) 
-- CODE:
from numpy import*
d = array(eval(input("Digite seu vetor")))

i = 0

while i != size(d):
	if(d[i]==0):
		d[i] = 0
	elif(d[i]%2 != 0):
		d[i] = 0
	i = i + 1
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 19:17:29) 
-- CODE:
from numpy import*
d = array(eval(input("Digite seu vetor")))

i = 0

while i != size(d):
	if(d[i]==0):
		d[i] = 0
	elif(d[i]%2 != 0):
		d[i] = 0
	i = i + 1
print(d)
-- EXECUTION TIME:
0.451644
-- TEST CASE 1:
---- input:
[11,21,31,41,51]
---- correct output:
[0 0 0 0 0]
---- user output:
[0 0 0 0 0]
-- TEST CASE 2:
---- input:
[12,22,32,42,52]
---- correct output:
[12 22 32 42 52]
---- user output:
[12 22 32 42 52]
-- TEST CASE 3:
---- input:
[1,3,5,2,4,6]
---- correct output:
[0 0 0 2 4 6]
---- user output:
[0 0 0 2 4 6]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
